fix chart axis y labels on mobile, format short hundred thousands

--- a/public/stylesheets/bcd-d3-charts.css
+++ b/public/stylesheets/bcd-d3-charts.css
@@ -105,8 +105,14 @@
   color: grey;
   fill: grey;
   text-align: center;
-  font-size: 1rem;
+  font-size: 12px;
+  text-anchor: middle;
 }
+
+.titleY {
+  transform: rotate(-90deg) translateY(-48px);
+}
+
 
 .light .legendText,
 .light .titleX,
