--- a/public/stylesheets/themes/themes.css
+++ b/public/stylesheets/themes/themes.css
@@ -307,8 +307,8 @@
 .theme__text-chart__spinner {
   display: flex;
   position: relative;
-  width: 60%;
-  height: 60%;
+  width: 100%;
+  height: 100%;
   color: white;
   text-align: center;
   align-items: center;
@@ -318,6 +318,7 @@
 
 .theme__text-chart__spinner p {
   text-align: center;
+  font-size: 14px;
 }
 
 .theme__text-chart__spinner img {
